1/12/13 for PTP challenges, only show guess lines when (!correct && (state=TRY_AGAIN || state==NEXT))
1/10/13 use only positive slopes for challenges in level 4 that force slope inversion
1/10/13 show guess ("Your Line" for GLT, "A Correct Equation" for MTE) only if they get the challenge wrong, to avoid issue of different equations for the same line
1/10/13 in level 1, change y-intercept range to (-6,4)
1/10/13 fix: scoreboard always displays level 6
1/10/13 change: "Correct Answer" to "A Correct Answer"
1/10/13 change order of graph controls: slope tool, y=x, y=-x, Hide lines
# 0.00.49 (71607) Jan 9, 2013
1/9/13 dev version with challenge generation for levels 1-4
1/9/13 document why mvt is created in model
1/9/13 various changes in comments for LineForm to EquationForm change
1/9/13 rename LineForm to EquationForm, rename local variables accordingly
1/9/13 add support for mismatching the line form of the equation & graph in GTL challenges
1/9/13 algorithm that forces inversion of slope, picks (x1,y1) on the graph such that (x2,y2) is off the graph
1/9/13 document game packages, change signatures of some constructors and methods for consistency [71586]
1/9/13 make some classes package private
1/9/13 move inner subclasses of ChallengeGraphNode to their own class files, rename
1/9/13 remove code in SlopeEquationNode related to putting m=rise/run on a separate line [71577]
1/9/13 merge GTL_GraphNode and MTE_GraphNode into ChallengeGraphNode
1/9/13 remove console logging that is no longer needed
1/9/13 document CoordinateSpinnerNode constructor
1/9/13 scale only the control panel that's too wide, not both control panels
1/9/13 center control panels in the right section of the canvas (first 3 tabs), scale control panels if i18n makes them too wide
1/8/13 for first 3 tabs, keep graph in same position, tweak position so that slope tool doesn't fall off left edge of play area
1/8/13 remove unnecessary IChallenge interface, rename base class MatchChallenge to Challenge