@@ -1,8 +1,6 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.linegraphing.linegame.view;
 
-import java.awt.geom.Point2D;
-
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponentTypes;
 import edu.colorado.phet.common.phetcommon.util.DoubleRange;
@@ -10,7 +8,6 @@ import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.linegraphing.common.LGColors;
 import edu.colorado.phet.linegraphing.common.LGSimSharing.UserComponents;
 import edu.colorado.phet.linegraphing.common.model.Line;
-import edu.colorado.phet.linegraphing.common.view.PlottedPointNode;
 import edu.colorado.phet.linegraphing.common.view.manipulator.LineManipulatorNode;
 import edu.colorado.phet.linegraphing.common.view.manipulator.SlopeDragHandler;
 import edu.colorado.phet.linegraphing.common.view.manipulator.X1Y1DragHandler;
@@ -18,7 +15,6 @@ import edu.colorado.phet.linegraphing.linegame.LineGameConstants;
 import edu.colorado.phet.linegraphing.linegame.model.Challenge;
 import edu.colorado.phet.linegraphing.linegame.model.ManipulationMode;
 import edu.colorado.phet.linegraphing.pointslope.model.PointSlopeParameterRange;
-import edu.umd.cs.piccolo.PNode;
 
 /**
  * Challenge graph with manipulators for point (x1,y1) and slope of the guess line.
@@ -31,8 +27,13 @@ class PointSlopeGraphNode extends ChallengeGraphNode {
     public PointSlopeGraphNode( final Challenge challenge ) {
         super( challenge, true /* slopeToolEnabled */ );
 
+        final boolean pointIsVariable = ( challenge.manipulationMode == ManipulationMode.POINT ||  challenge.manipulationMode == ManipulationMode.POINT_SLOPE );
+        final boolean slopeIsVariable = ( challenge.manipulationMode == ManipulationMode.SLOPE ||  challenge.manipulationMode == ManipulationMode.POINT_SLOPE );
+
         setAnswerVisible( false );
         setGuessVisible( true );
+        setAnswerPointVisible( false );
+        setGuessPointVisible( false );
 
         // dynamic ranges
         final PointSlopeParameterRange pointSlopeParameterRange = new PointSlopeParameterRange();
@@ -48,10 +49,6 @@ class PointSlopeGraphNode extends ChallengeGraphNode {
         pointManipulatorNode.addInputEventListener( new X1Y1DragHandler( UserComponents.pointManipulator, UserComponentTypes.sprite,
                                                                          pointManipulatorNode, challenge.mvt, challenge.guess, x1Range, y1Range,
                                                                          true /* constantSlope */ ) );
-        // plotted point (x1,y1)
-        final double pointDiameter = challenge.mvt.modelToViewDeltaX( LineGameConstants.POINT_DIAMETER );
-        final PNode pointNode = new PlottedPointNode( pointDiameter, LGColors.PLOTTED_POINT );
-        pointNode.setOffset( challenge.mvt.modelToView( new Point2D.Double( challenge.guess.get().x1, challenge.guess.get().y1 ) ) );
 
         // slope manipulator
         final LineManipulatorNode slopeManipulatorNode = new LineManipulatorNode( manipulatorDiameter, LGColors.SLOPE );
@@ -60,13 +57,10 @@ class PointSlopeGraphNode extends ChallengeGraphNode {
                                                                           riseRange, runRange ) );
 
         // Rendering order
-        if ( challenge.manipulationMode == ManipulationMode.POINT || challenge.manipulationMode == ManipulationMode.POINT_SLOPE ) {
+        if ( pointIsVariable ) {
             addChild( pointManipulatorNode );
         }
-        else {
-            addChild( pointNode );
-        }
-        if ( challenge.manipulationMode == ManipulationMode.SLOPE || challenge.manipulationMode == ManipulationMode.POINT_SLOPE ) {
+        if ( slopeIsVariable ) {
             addChild( slopeManipulatorNode );
         }
 
@@ -76,7 +70,6 @@ class PointSlopeGraphNode extends ChallengeGraphNode {
 
                 // move the manipulators
                 pointManipulatorNode.setOffset( challenge.mvt.modelToView( line.x1, line.y1 ) );
-                pointNode.setOffset( pointManipulatorNode.getOffset() );
                 slopeManipulatorNode.setOffset( challenge.mvt.modelToView( line.x2, line.y2 ) );
 
                 // adjust ranges
