@@ -8,7 +8,6 @@ import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.linegraphing.common.LGColors;
 import edu.colorado.phet.linegraphing.common.LGSimSharing.UserComponents;
 import edu.colorado.phet.linegraphing.common.model.Line;
-import edu.colorado.phet.linegraphing.common.view.PlottedPointNode;
 import edu.colorado.phet.linegraphing.common.view.manipulator.LineManipulatorNode;
 import edu.colorado.phet.linegraphing.common.view.manipulator.SlopeDragHandler;
 import edu.colorado.phet.linegraphing.common.view.manipulator.X1Y1DragHandler;
@@ -16,7 +15,6 @@ import edu.colorado.phet.linegraphing.linegame.LineGameConstants;
 import edu.colorado.phet.linegraphing.linegame.model.Challenge;
 import edu.colorado.phet.linegraphing.linegame.model.ManipulationMode;
 import edu.colorado.phet.linegraphing.slopeintercept.model.SlopeInterceptParameterRange;
-import edu.umd.cs.piccolo.PNode;
 
 /**
  * Challenge graph with manipulators for slope and y-intercept of the guess line.
@@ -29,8 +27,13 @@ class SlopeInterceptGraphNode extends ChallengeGraphNode {
     public SlopeInterceptGraphNode( final Challenge challenge ) {
         super( challenge, true /* slopeToolEnabled */ );
 
+        final boolean slopeIsVariable = ( challenge.manipulationMode == ManipulationMode.SLOPE || challenge.manipulationMode == ManipulationMode.SLOPE_INTERCEPT );
+        final boolean interceptIsVariable = ( challenge.manipulationMode == ManipulationMode.INTERCEPT || challenge.manipulationMode == ManipulationMode.SLOPE_INTERCEPT );
+
         setAnswerVisible( false );
         setGuessVisible( true );
+        setAnswerPointVisible( false );
+        setGuessPointVisible( false );
 
         // dynamic ranges
         SlopeInterceptParameterRange parameterRange = new SlopeInterceptParameterRange();
@@ -53,18 +56,12 @@ class SlopeInterceptGraphNode extends ChallengeGraphNode {
                                                                              new Property<DoubleRange>( new DoubleRange( 0, 0 ) ), /* x1 is fixed */
                                                                              y1Range,
                                                                              true /* constantSlope */ ) );
-        // plotted y-intercept
-        final double pointDiameter = challenge.mvt.modelToViewDeltaX( LineGameConstants.POINT_DIAMETER );
-        final PNode interceptNode = new PlottedPointNode( pointDiameter, LGColors.PLOTTED_POINT );
 
         // Rendering order
-        if ( challenge.manipulationMode == ManipulationMode.INTERCEPT || challenge.manipulationMode == ManipulationMode.SLOPE_INTERCEPT ) {
+        if ( interceptIsVariable ) {
             addChild( interceptManipulatorNode );
         }
-        else {
-            addChild( interceptNode );
-        }
-        if ( challenge.manipulationMode == ManipulationMode.SLOPE || challenge.manipulationMode == ManipulationMode.SLOPE_INTERCEPT ) {
+        if ( slopeIsVariable ) {
             addChild( slopeManipulatorNode );
         }
 
@@ -75,7 +72,6 @@ class SlopeInterceptGraphNode extends ChallengeGraphNode {
                 // move the manipulators
                 slopeManipulatorNode.setOffset( challenge.mvt.modelToView( line.x2, line.y2 ) );
                 interceptManipulatorNode.setOffset( challenge.mvt.modelToView( line.x1, line.y1 ) );
-                interceptNode.setOffset( interceptManipulatorNode.getOffset() );
 
                 // adjust ranges
                 if ( challenge.manipulationMode == ManipulationMode.SLOPE_INTERCEPT ) {
